indexPage.css
/*body{
    margin: 0;
    font-style: normal;
    font-weight: 400;
    font-family: 'Noto Sans', sans-serif;
}*/

@font-face{
    font-family: 'Noto Sans';
    src: url("res/NotoSans-Regular.ttf");
}

body{
    margin: 0;
    font-family: 'Noto Sans', sans-serif;
    overflow-x: hidden !important;
}

.hoverAnimation{
    transition: transform 0.3s;
    -webkit-transition: transform 0.3s;
}

.hoverAnimation:hover{
    transform: translate(0,-20px);
}

.hoverAnimationWeak{
    transition: transform 0.3s;
    -webkit-transition: transform 0.3s;
}

.hoverAnimationWeak:hover{
    transform: translate(0,-10px);
}

#scrollBtn {
    opacity: 0;
    position: fixed; /* Fixed/sticky position */
    bottom: 15px; /* Place the button at the bottom of the page */
    right: 20px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    cursor: pointer; /* Add a mouse pointer on hover */
    transition: opacity 0.5s;
}

#imageScroll{
    height: 7vh;
}

#planeContainer{
    background-image: linear-gradient(to bottom, #05b0db 0%, #495aff 100%);
    height: 30vh;
    width: 100vw;
}

#plane{
    width: 100px;
}

.topBarImage {
    position: absolute;
    width: 100%;
    padding: 0px;
    margin: 0;
    border: 0;
}

.profilePic{
    position: relative;
    max-width: 320px;;
    width: 40vw;
    display: block;
    margin: auto;
}

.textBlock { 
    text-align: center;
    max-width: 770px;
    margin: auto;
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 8%;
    font-size: 18pt;
}

div svg{
    fill: black;
}

#socialMediaContainer{
    display: block;
    text-align: center;
    color: yellow;
    padding: 1%;
}

.socialMediaButton{
    width: 70px;
    height: 70px;
    margin: 1%;
}

.appBoxes{
    max-width: 1350px;
    display: block;
    margin: auto;
    overflow: visible;
    margin-top: 80px;
    margin-bottom: 80px;
    text-align: center;
}

.appIcon{
    width: 40%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.appTitle{
    font-size: 25pt;
    text-align: center;
    margin: 0;
}

#appBox{
    max-width: 400px;
    display: inline-block;
    margin: auto;
    margin: 10px;
    margin-top: 40px;
    padding: 10px;
    box-shadow: 4px 8px 15px #888888;
    border-radius: 10px;
    text-decoration: none;
    color: black;
    background-color: white;
    transition: transform 0.3s,
                box-shadow 0.3s;
    -webkit-transition: transform 0.3s,
                        box-shadow 0.3s;
}

#appBox:hover{
    transform: translate(0,-20px);
    box-shadow: 5px 15px 25px #888888;
}

#background{
    position: absolute;
    display: block;
    margin: auto;
    padding-top: 100px;
    z-index: -1;
}

.projectShowcase{
    text-align: center;
    overflow: hidden;
    min-height: 100vh;
}

.phoneImage{
    max-width: 320px;
    display: block;
    margin: auto;
}

.showcaseTitle{
    font-size: 30pt;
}

.showcaseCategory{
    margin-top: 10px;
    padding-bottom: 30px;
}

.showcaseDescription{
    font-size: 13pt;
    max-width: 500px;
    margin: auto;
    padding-left: 5%;
    padding-right: 5%;
    margin-top: -20px;
    margin-bottom: 50px;
}

.showcaseButtonLink{
    text-decoration: none;
    display: block;
}

.showcaseButton{
    margin: auto;
    /*box-shadow: 5px 10px 18px #000000;*/
    padding: 12px;
    border-radius: 3px;
    font-size: 15pt;
}

#sectionSwitchyRoads{
    background-image: linear-gradient(to bottom, #05b0db 0%, #495aff 100%);
    margin-top: 50px;
    color: white;
}

#linkSwitchyRoads{
    color: #0086a3;
}

#buttonSwitchyRoads{
    background-color: #6CE5FF;
}

#sectionMegaJump{
    background-image: linear-gradient(to top, #ff4835 0%, #fb3894 100%);
    color: white;
}


#linkMegaJump{
    color: #e40000;
}


#buttonMegaJump{
    background-color: #ffa3a3;
}

#sectionSafeThatFish{
    background-image: linear-gradient(to top, #0fd850 0%, #c9f947 100%);
    color: white;
}


#linkSafeThatFish{
    color: green;
}


#buttonSafeThatFish{
    background-color: #a4fba4;
}

#sectionPartyStarter{
    background-image: linear-gradient(to bottom, #cc208e 0%, #9613d2 100%);
    color: white;
}

#linkPartyStarter{
    color: #881e76;
}

#buttonPartyStarter{
    background-color: #ff68fd;
}

.windowScreen{
    max-width: 820px;
    width: 90%;
    display: block;
    margin: auto;
}

